fixed the weird cut off on the bottom of the arrow

--- a/assets/css/flexslider.css
+++ b/assets/css/flexslider.css
@@ -119,7 +119,7 @@ html[xmlns] .flexslider .slides {
   text-decoration: none;
   display: block;
   width: 40px;
-  height: 40px;
+  height: 50px;
   margin: -20px 0 0;
   position: absolute;
   top: 50%;
